# 6res

./: .eslintrc.json  .gitignore  .gitmodules  Cargo.toml  README.md  opener.txt  package.json  test.txt  tsconfig.json
data/: kicks.txt  tc
src/: all_placements.ts  bot.ts  check.ts  defs.ts  engine.ts  index.ts  input.ts  instance.ts  json.rs  main.rs  opener_db.ts  path-sfinder.ts  path.ts  ribbon.rs  ribbon.ts  tools.ts  tracing.ts  ty.rs  ty.ts  usm.ts  util.ts
