[package]
name = "res"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
url = "2.5.4"
